--- a/src/components/ReportComponent/Report.scss
+++ b/src/components/ReportComponent/Report.scss
@@ -89,12 +89,15 @@
 					font-size: 14px;
 					font-style: normal;
 					font-weight: 500;
-					line-height: 150%; /* 21px */
+					line-height: 150%;
 				}
-			}
-			.item:hover {
-				border: 1px solid var(--main-red);
-				transition: all ease 0.3s;
+
+				@media screen and (min-width: 1024px) {
+					&:hover {
+						border: 1px solid var(--main-red);
+						transition: all ease 0.3s;
+					}
+				}
 			}
 		}
 		.hrElement {
